Tested the APIs of the timeline event